added link to Heroku in README

--- a/superheroes/README.rdoc
+++ b/superheroes/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+Link for Heroku: https://floating-oasis-94509.herokuapp.com/
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
