changed link to heroku

--- a/superheroes/README.rdoc
+++ b/superheroes/README.rdoc
@@ -1,6 +1,6 @@
 == README
 
-Link for Heroku: https://floating-oasis-94509.herokuapp.com/
+Link for Heroku: https://shrouded-forest-50601.herokuapp.com/
 
 This README would normally document whatever steps are necessary to get the
 application up and running.
